--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hummingbird - Voice Chat AI</title>
-    <meta name="description" content="Talk to Hummingbird, your voice-enabled AI assistant" />
-    <meta name="author" content="Lovable" />
+    <title>Hummingbird — Your AI Tool Finder</title>
+    <meta name="description" content="Talk to a witty AI concierge for product ideas, tool discovery, and smart recommendations" />
+    <meta name="author" content="Hummingbird" />
 
-    <meta property="og:title" content="Hummingbird - Voice Chat AI" />
-    <meta property="og:description" content="Talk to Hummingbird, your voice-enabled AI assistant" />
+    <meta property="og:title" content="Hummingbird — Your AI Tool Finder" />
+    <meta property="og:description" content="Talk to awitty AI concierge for product ideas, tool discovery, and smart recommendations." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
